Migrate some tests to use Neo4jWithSocketExtension